# data-agent-pro

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mcp.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/chatmodes/: azure-aisec-agent.md  azure-ds-agent.md  azure-mlops-engineer.md
.github/workflows/: aml-train-evaluate.yml  code-quality.yml  data-quality.yml  model-ci.yml
aml/: compute.bicep  workspace.bicep
aml/environments/: inference-conda.yml  training-conda.yml
aml/pipelines/: pipeline-batch-score.yml  pipeline-train.yml
data/raw/: customer_churn.csv
docs/: INITIAL_SETUP_README.md  MCP_QUICKSTART.md  MCP_SETUP_GUIDE.md  WORKSHOP_3H.md
docs/learning-paths/: azure-mlops-profesional.md  copilot-para-ciencia-de-datos.md
docs/workshop/: CHECKLIST.md  QUICKSTART.md  README.md  generate_dataset.py
docs/workshop/solutions/: SOLUTIONS.md
notebooks/: 01_exploracion.ipynb  02_preparacion_datos.ipynb  03_entrenamiento.ipynb  04_evaluacion.ipynb  05_despliegue_y_monitorizacion.ipynb
scripts/data/: ingest.py  validate.py
scripts/deploy/: deploy_online_endpoint.py  register_model.py
scripts/login/: azure-login.sh
scripts/setup/: aml-setup.sh  databricks-setup.sh  initial-setup.sh  mcp-setup.sh
scripts/train/: evaluate.py  train.py
scripts/utils/: io.py  telemetry.py
src/features/: features.py  transformers.py
src/models/: trainer.py
